--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
         <module>dao</module>
         <module>service</module>
         <module>j2ee</module>
-<!--        <module>standalone</module>-->
+        <module>standalone</module>
 <!--        <module>client</module>-->
     </modules>
 
